--- a/index.html
+++ b/index.html
@@ -32,10 +32,7 @@ body {
 </style>
 <body>
 	<div class="large">
-		I set out to answer the age old question.<br>Which gets searched for more: cats or butts?
-	</div>
-	<br><br>
-	<div>
+		I set out to answer the age old question. <b>Which gets searched for more: cats or butts?</b><br>
 		Values are all relative to each other. For example, a value of 20 means that it was searched 1/5 as much during that particular week as the maximum of all of the terms across the entire time range.
 	</div>
 	<div id="firstGraph"></div>
